--- a/category.html
+++ b/category.html
@@ -10,11 +10,29 @@
       <header><a href="category.html">HOME</a></header>
     </header>
     <main>
-      <button onclick="location.href='productlist.html';" class="button">
-        PUMA
+      <button
+        onclick="location.href='productlist.html?season=Summer';"
+        class="button"
+      >
+        Summer
       </button>
-      <button onclick="location.href='productlist.html';" class="button">
-        NIKE
+      <button
+        onclick="location.href='productlist.html?season=Winter';"
+        class="button"
+      >
+        Winter
+      </button>
+      <button
+        onclick="location.href='productlist.html?season=Fall';"
+        class="button"
+      >
+        Fall
+      </button>
+      <button
+        onclick="location.href='productlist.html?season=Spring';"
+        class="button"
+      >
+        Spring
       </button>
     </main>
     <footer>
