--- a/product.html
+++ b/product.html
@@ -14,25 +14,23 @@
       <section>
         <ul>
           <li><strong>Product name:</strong></li>
-          <li>Black Fleece Jacket</li>
+          <li class="name">Black Fleece Jacket</li>
           <li><strong>Category:</strong></li>
-          <li>Apparell</li>
+          <li class="category">Apparell</li>
           <li><strong>Type:</strong></li>
-          <li>Jacket</li>
+          <li class="type">Jacket</li>
           <li><strong>Season:</strong></li>
-          <li>Fall</li>
+          <li class="season">Fall</li>
           <li><strong>Production year:</strong></li>
-          <li>2010</li>
+          <li class="year">2010</li>
         </ul>
       </section>
-      <img
-        src="https://kea-alt-del.dk/t7/images/webp/640/1528.webp"
-        alt="Black Fleece Jacket"
-      />
+      <img class="product-image" src="" alt="Black Fleece Jacket" />
     </main>
     <footer>
       Data comes from
       https://www.kaggle.com/paramaggarwal/fashion-product-images-dataset
     </footer>
+    <script src="product.js"></script>
   </body>
 </html>
